fixed plotly not showing in notebook problem

--- a/apps/voila_apps/app_dev.ipynb
+++ b/apps/voila_apps/app_dev.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -21,37 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#reload(app)\n",
-    "#app.run_all_code_below_button()\n",
-    "#app.main()\n",
-    "#app.run_all_code_below_button()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "schema = app.stack_overflow.read_schema()\n",
-    "results = app.stack_overflow.read_results()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
+      "application/javascript": [
+       "IPython.notebook.execute_cells_below()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "996353e9f85248ec93082dcbd1aaf683",
+       "model_id": "fc0deb18489348dfa18bbd2b1830e7a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +73,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dfae05390754b6ebefdd16c0cf3bf5c",
+       "model_id": "5b8244e00d224a51813d090a290498b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -97,7 +87,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "649230fbdfe44b328e3e49603c57c191",
+       "model_id": "659e9bf2e7464f1d90145f4864c4ce84",
        "version_major": 2,
        "version_minor": 0
       },
